========================================
Change log for mod_taskchain
========================================

2024-02-10 (12)
 - mod_hotpot fix link to user on function to 'get_recent_mod_activity()'

2024-02-10 (11)
 - more efficient code to fetch 'modgrade' string in Moodle >= 2.8 and 'grade' string in Moodle <= 2.7.

2024-02-03 (10)
 - hide egacy event methods that cause an error in Moodle >= 4.2

2024-02-02 (09)
 - fix duplicated headers in pages on Moodle >= 4.x

2024-01-30 (08)
 - fix errors about null name in form headings

2024-01-24 (07)
 - improve layout on form to forms to edit tasks and chains on non-Boost themes

2024-01-24 (05)
 - fix layout on form to edit singel task, chain or columnlist

2024-01-22 (04)
 - small change to code layout for readability

2023-09-27 (01)
 - improve compatability with old themes that not based on Boost or Bootstrap 4.

2023-09-27 (00)
 - add CSS to display activity grades on course page

2023-09-08 (98)
 - fix a couple of compatability issues with Moodle 4.x. [1] ensure 'introformat' field is not null, [2] ensure 'tableprefix' value is not null when request chaingrade report

2023-04-21 (97)
 - fix display of grades on coure page in Moodle >= 4.x

2022-09-15 (96)
 - fix setting of intro field in Moodle 4.x

2022-09-06 (95)
 - small fix for error message when adding new conditions to a taskchain

2022-09-06 (94)
 - fix compatibility with PHP 8.x and Moodle 4.x [1] remove use of  deprecated string ('grade', 'core') [2] remove use of continue in switch statement; [3] remove use of curly braces on strings; [4] add 'intro' and 'introformat' fields; [5] use custom version of utf8_to_entities() that does not convert strings to lowercase;

2022-02-18 (93)
 - fix error when displaying grades on course page for non-editing teacher

2021-09-14 (92)
 - modify markdown syntax for long help messages (for compatability with Moodle 3.11)

2021-06-09 (91)