@@ -2,6 +2,9 @@
 Change log for mod_taskchain
 ========================================
 
+2025-05-03 (13)
+ - modify db/subplugins.json for compatability with MDL-83705 and Moodle >= 5.x
+
 2024-02-10 (12)
  - mod_hotpot fix link to user on function to 'get_recent_mod_activity()'
 
